--- a/pppppp/View/Friend&MeDataView/MyDataView/ProfileView.storyboard
+++ b/pppppp/View/Friend&MeDataView/MyDataView/ProfileView.storyboard
@@ -73,21 +73,21 @@
                                 <rect key="frame" x="0.0" y="294" width="390" height="467"/>
                                 <subviews>
                                     <tableView clipsSubviews="YES" contentMode="scaleToFill" alwaysBounceVertical="YES" dataMode="prototypes" style="insetGrouped" separatorStyle="default" allowsSelection="NO" rowHeight="-1" estimatedRowHeight="-1" sectionHeaderHeight="18" estimatedSectionHeaderHeight="-1" sectionFooterHeight="18" estimatedSectionFooterHeight="-1" translatesAutoresizingMaskIntoConstraints="NO" id="J3b-i7-ahx">
-                                        <rect key="frame" x="0.0" y="206.66666666666671" width="390" height="260.33333333333326"/>
+                                        <rect key="frame" x="0.0" y="205" width="390" height="262"/>
                                         <color key="backgroundColor" systemColor="systemBackgroundColor"/>
                                     </tableView>
                                     <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="CALENDER GRASS" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="jPb-GB-oHC">
-                                        <rect key="frame" x="24" y="0.0" width="129" height="17"/>
+                                        <rect key="frame" x="16" y="0.0" width="129" height="17"/>
                                         <fontDescription key="fontDescription" type="boldSystem" pointSize="14"/>
                                         <color key="textColor" white="1" alpha="0.72999999999999998" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                                         <nil key="highlightedColor"/>
                                     </label>
                                     <collectionView clipsSubviews="YES" multipleTouchEnabled="YES" tag="1" contentMode="scaleToFill" dataMode="prototypes" translatesAutoresizingMaskIntoConstraints="NO" id="lAc-Rk-I35">
-                                        <rect key="frame" x="20.666666666666657" y="21" width="349" height="140.66666666666666"/>
+                                        <rect key="frame" x="20.666666666666657" y="21" width="348.66666666666674" height="139"/>
                                         <color key="backgroundColor" white="0.0" alpha="0.0" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                                         <constraints>
-                                            <constraint firstAttribute="height" constant="140.5" id="6vn-Rg-sMl"/>
-                                            <constraint firstAttribute="width" constant="349" id="cgt-8a-Aoo"/>
+                                            <constraint firstAttribute="height" constant="139" id="6vn-Rg-sMl"/>
+                                            <constraint firstAttribute="width" constant="348.5" id="cgt-8a-Aoo"/>
                                         </constraints>
                                         <collectionViewFlowLayout key="collectionViewLayout" automaticEstimatedItemSize="YES" minimumLineSpacing="10" minimumInteritemSpacing="10" id="plU-zI-o8W">
                                             <size key="itemSize" width="128" height="128"/>
@@ -98,7 +98,7 @@
                                         <cells/>
                                     </collectionView>
                                     <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="RECENT ACTIVITIES" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="bY7-tD-DRw">
-                                        <rect key="frame" x="24" y="185.66666666666669" width="139" height="17"/>
+                                        <rect key="frame" x="16" y="184" width="139" height="17"/>
                                         <fontDescription key="fontDescription" type="boldSystem" pointSize="14"/>
                                         <color key="textColor" white="1" alpha="0.72999999999999998" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                                         <nil key="highlightedColor"/>
@@ -107,8 +107,8 @@
                                 <color key="backgroundColor" white="0.0" alpha="0.0" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                                 <constraints>
                                     <constraint firstItem="lAc-Rk-I35" firstAttribute="top" secondItem="jPb-GB-oHC" secondAttribute="bottom" constant="4" id="00w-W0-0lk"/>
-                                    <constraint firstItem="jPb-GB-oHC" firstAttribute="leading" secondItem="Gji-DF-TMj" secondAttribute="leading" constant="24" id="46C-pm-M5Z"/>
-                                    <constraint firstItem="bY7-tD-DRw" firstAttribute="leading" secondItem="Gji-DF-TMj" secondAttribute="leading" constant="24" id="DG1-bS-jHI"/>
+                                    <constraint firstItem="jPb-GB-oHC" firstAttribute="leading" secondItem="Gji-DF-TMj" secondAttribute="leading" constant="16" id="46C-pm-M5Z"/>
+                                    <constraint firstItem="bY7-tD-DRw" firstAttribute="leading" secondItem="Gji-DF-TMj" secondAttribute="leading" constant="16" id="DG1-bS-jHI"/>
                                     <constraint firstItem="jPb-GB-oHC" firstAttribute="top" secondItem="Gji-DF-TMj" secondAttribute="top" id="EOf-vE-Jk2"/>
                                     <constraint firstItem="J3b-i7-ahx" firstAttribute="leading" secondItem="Gji-DF-TMj" secondAttribute="leading" id="ShC-Tg-Zi3"/>
                                     <constraint firstItem="J3b-i7-ahx" firstAttribute="top" secondItem="bY7-tD-DRw" secondAttribute="bottom" constant="4" id="Ubr-vb-HmH"/>
