--- a/pppppp/View/Friend&MeDataView/MyDataView/ProfileView.storyboard
+++ b/pppppp/View/Friend&MeDataView/MyDataView/ProfileView.storyboard
@@ -83,11 +83,11 @@
                                         <nil key="highlightedColor"/>
                                     </label>
                                     <collectionView clipsSubviews="YES" multipleTouchEnabled="YES" tag="1" contentMode="scaleToFill" dataMode="prototypes" translatesAutoresizingMaskIntoConstraints="NO" id="lAc-Rk-I35">
-                                        <rect key="frame" x="20.666666666666657" y="21" width="348.66666666666674" height="139"/>
+                                        <rect key="frame" x="23.333333333333343" y="21" width="343.33333333333326" height="139"/>
                                         <color key="backgroundColor" white="0.0" alpha="0.0" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                                         <constraints>
                                             <constraint firstAttribute="height" constant="139" id="6vn-Rg-sMl"/>
-                                            <constraint firstAttribute="width" constant="348.5" id="cgt-8a-Aoo"/>
+                                            <constraint firstAttribute="width" constant="343.39999999999998" id="cgt-8a-Aoo"/>
                                         </constraints>
                                         <collectionViewFlowLayout key="collectionViewLayout" automaticEstimatedItemSize="YES" minimumLineSpacing="10" minimumInteritemSpacing="10" id="plU-zI-o8W">
                                             <size key="itemSize" width="128" height="128"/>
