--- a/pppppp/View/DashboardView/SanitasCollectionView/DashboardView.storyboard
+++ b/pppppp/View/DashboardView/SanitasCollectionView/DashboardView.storyboard
@@ -5,7 +5,6 @@
         <deployment identifier="iOS"/>
         <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="21207"/>
         <capability name="Safe area layout guides" minToolsVersion="9.0"/>
-        <capability name="collection view cell content view" minToolsVersion="11.0"/>
         <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
     </dependencies>
     <scenes>
@@ -17,39 +16,30 @@
                         <rect key="frame" x="0.0" y="0.0" width="414" height="896"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
-                            <collectionView clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" dataMode="prototypes" translatesAutoresizingMaskIntoConstraints="NO" id="8RF-zd-AGi">
-                                <rect key="frame" x="0.0" y="92" width="414" height="770"/>
+                            <collectionView clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" dataMode="prototypes" translatesAutoresizingMaskIntoConstraints="NO" id="0AS-4d-5gZ">
+                                <rect key="frame" x="0.0" y="144" width="414" height="718"/>
                                 <color key="backgroundColor" white="0.0" alpha="0.0" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
-                                <collectionViewFlowLayout key="collectionViewLayout" automaticEstimatedItemSize="YES" minimumLineSpacing="10" minimumInteritemSpacing="10" id="PjR-mQ-wTF">
+                                <collectionViewFlowLayout key="collectionViewLayout" automaticEstimatedItemSize="YES" minimumLineSpacing="10" minimumInteritemSpacing="10" id="4Nf-Zh-dgo">
                                     <size key="itemSize" width="128" height="128"/>
                                     <size key="headerReferenceSize" width="0.0" height="0.0"/>
                                     <size key="footerReferenceSize" width="0.0" height="0.0"/>
                                     <inset key="sectionInset" minX="0.0" minY="0.0" maxX="0.0" maxY="0.0"/>
                                 </collectionViewFlowLayout>
-                                <cells>
-                                    <collectionViewCell opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" reuseIdentifier="DashBoardDataCell" id="ryB-6v-xsB">
-                                        <rect key="frame" x="0.0" y="0.0" width="128" height="128"/>
-                                        <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
-                                        <collectionViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" insetsLayoutMarginsFromSafeArea="NO" id="XAN-ZI-m6P">
-                                            <rect key="frame" x="0.0" y="0.0" width="128" height="128"/>
-                                            <autoresizingMask key="autoresizingMask"/>
-                                        </collectionViewCellContentView>
-                                    </collectionViewCell>
-                                </cells>
+                                <cells/>
                             </collectionView>
                         </subviews>
                         <viewLayoutGuide key="safeArea" id="aU8-9C-mDn"/>
                         <color key="backgroundColor" red="0.074509803920000006" green="0.0" blue="0.29803921570000003" alpha="1" colorSpace="calibratedRGB"/>
                         <constraints>
-                            <constraint firstItem="8RF-zd-AGi" firstAttribute="trailing" secondItem="aU8-9C-mDn" secondAttribute="trailing" id="3iG-7P-HoZ"/>
-                            <constraint firstItem="8RF-zd-AGi" firstAttribute="top" secondItem="aU8-9C-mDn" secondAttribute="top" id="AiX-zK-0z3"/>
-                            <constraint firstAttribute="bottomMargin" secondItem="8RF-zd-AGi" secondAttribute="bottom" id="SdP-xD-VSA"/>
-                            <constraint firstItem="8RF-zd-AGi" firstAttribute="leading" secondItem="aU8-9C-mDn" secondAttribute="leading" id="ilB-Nd-FPL"/>
+                            <constraint firstItem="0AS-4d-5gZ" firstAttribute="top" secondItem="aU8-9C-mDn" secondAttribute="top" id="iB1-1B-p7Z"/>
+                            <constraint firstItem="0AS-4d-5gZ" firstAttribute="leading" secondItem="aU8-9C-mDn" secondAttribute="leading" id="lkh-P1-TnN"/>
+                            <constraint firstItem="aU8-9C-mDn" firstAttribute="bottom" secondItem="0AS-4d-5gZ" secondAttribute="bottom" id="niI-8N-aJy"/>
+                            <constraint firstItem="aU8-9C-mDn" firstAttribute="trailing" secondItem="0AS-4d-5gZ" secondAttribute="trailing" id="yiX-ki-vmh"/>
                         </constraints>
                     </view>
                     <navigationItem key="navigationItem" title="Sanitas" largeTitleDisplayMode="always" id="hjC-un-1dZ"/>
                     <connections>
-                        <outlet property="collectionView" destination="8RF-zd-AGi" id="eOd-cC-4Ca"/>
+                        <outlet property="collectionView" destination="0AS-4d-5gZ" id="q9C-Ra-dNT"/>
                     </connections>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="wS8-gV-m30" userLabel="First Responder" customClass="UIResponder" sceneMemberID="firstResponder"/>
