--- a/pppppp/View/SettingsView/ChangeProfileView.storyboard
+++ b/pppppp/View/SettingsView/ChangeProfileView.storyboard
@@ -18,7 +18,7 @@
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
                             <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="----" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="3qk-yW-ZCe">
-                                <rect key="frame" x="122" y="322" width="182" height="82"/>
+                                <rect key="frame" x="122" y="72" width="182" height="82"/>
                                 <constraints>
                                     <constraint firstAttribute="height" constant="82" id="SfR-95-80H"/>
                                     <constraint firstAttribute="width" constant="182" id="sVI-tE-MaD"/>
@@ -28,7 +28,7 @@
                                 <nil key="highlightedColor"/>
                             </label>
                             <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" translatesAutoresizingMaskIntoConstraints="NO" id="Tvi-m3-0rI">
-                                <rect key="frame" x="20" y="322" width="82" height="82"/>
+                                <rect key="frame" x="20" y="72" width="82" height="82"/>
                                 <color key="backgroundColor" white="0.0" alpha="0.0" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                                 <color key="tintColor" red="0.070588238540000001" green="0.0039215688589999999" blue="0.29803922770000002" alpha="1" colorSpace="custom" customColorSpace="displayP3"/>
                                 <constraints>
@@ -37,7 +37,7 @@
                                 </constraints>
                             </imageView>
                             <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="system" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="784-He-p3K">
-                                <rect key="frame" x="41" y="343" width="40" height="40"/>
+                                <rect key="frame" x="41" y="93" width="40" height="40"/>
                                 <color key="backgroundColor" white="0.0" alpha="0.0" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                                 <constraints>
                                     <constraint firstAttribute="height" constant="40" id="Xz2-Dt-t3J"/>
@@ -55,7 +55,7 @@
                                 </connections>
                             </button>
                             <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="system" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="Zx9-rs-OpS">
-                                <rect key="frame" x="32" y="492" width="350" height="48"/>
+                                <rect key="frame" x="32" y="242" width="350" height="48"/>
                                 <constraints>
                                     <constraint firstAttribute="width" constant="350" id="2qT-bo-tsf"/>
                                     <constraint firstAttribute="height" constant="48" id="wLl-n8-pa4"/>
@@ -67,7 +67,7 @@
                                 </connections>
                             </button>
                             <textField opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" placeholder="Enter your name" textAlignment="center" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="5xC-7x-6aS">
-                                <rect key="frame" x="32" y="424" width="350" height="48"/>
+                                <rect key="frame" x="32" y="174" width="350" height="48"/>
                                 <color key="backgroundColor" red="0.4823529412" green="0.50980392159999999" blue="1" alpha="0.5" colorSpace="custom" customColorSpace="displayP3"/>
                                 <constraints>
                                     <constraint firstAttribute="width" constant="350" id="RXb-ub-IJE"/>
@@ -81,7 +81,6 @@
                         <viewLayoutGuide key="safeArea" id="KNT-3O-IY0"/>
                         <color key="backgroundColor" red="0.071201466020000007" green="0.0" blue="0.29860094190000003" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                         <constraints>
-                            <constraint firstItem="5xC-7x-6aS" firstAttribute="centerY" secondItem="hpd-ge-4h6" secondAttribute="centerY" id="BPY-EF-2ru"/>
                             <constraint firstItem="Zx9-rs-OpS" firstAttribute="top" secondItem="5xC-7x-6aS" secondAttribute="bottom" constant="20" id="Bff-sX-fY5"/>
                             <constraint firstItem="3qk-yW-ZCe" firstAttribute="leading" secondItem="Tvi-m3-0rI" secondAttribute="trailing" constant="20" id="J7e-Jy-a6Z"/>
                             <constraint firstItem="5xC-7x-6aS" firstAttribute="top" secondItem="3qk-yW-ZCe" secondAttribute="bottom" constant="20" id="V21-vP-no1"/>
@@ -91,6 +90,7 @@
                             <constraint firstItem="5xC-7x-6aS" firstAttribute="top" secondItem="Tvi-m3-0rI" secondAttribute="bottom" constant="20" id="fSQ-oO-iiI"/>
                             <constraint firstItem="Zx9-rs-OpS" firstAttribute="centerX" secondItem="hpd-ge-4h6" secondAttribute="centerX" id="iCk-Ns-Wf0"/>
                             <constraint firstItem="784-He-p3K" firstAttribute="centerX" secondItem="Tvi-m3-0rI" secondAttribute="centerX" id="ru5-uB-Kuk"/>
+                            <constraint firstItem="Tvi-m3-0rI" firstAttribute="top" secondItem="KNT-3O-IY0" secondAttribute="top" constant="24" id="zLj-2M-jHm"/>
                         </constraints>
                     </view>
                     <connections>
