--- a/pppppp/View/AddFriendsView/ShareMyDataView.storyboard
+++ b/pppppp/View/AddFriendsView/ShareMyDataView.storyboard
@@ -24,7 +24,7 @@
                                 <rect key="frame" x="0.0" y="0.0" width="414" height="896"/>
                             </view>
                             <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="ScanQRCode" translatesAutoresizingMaskIntoConstraints="NO" id="zbe-UI-CKp">
-                                <rect key="frame" x="89" y="266" width="236" height="236"/>
+                                <rect key="frame" x="89" y="272" width="236" height="236"/>
                                 <constraints>
                                     <constraint firstAttribute="width" constant="236" id="17p-0H-0gO"/>
                                     <constraint firstAttribute="height" constant="236" id="bvI-db-OFz"/>
@@ -77,7 +77,7 @@
                                 </connections>
                             </button>
                             <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="system" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="1Kd-65-Gbj">
-                                <rect key="frame" x="48" y="369" width="318" height="34"/>
+                                <rect key="frame" x="48" y="375" width="318" height="34"/>
                                 <state key="normal" title="Button"/>
                                 <buttonConfiguration key="configuration" style="filled" image="exclamationmark.triangle.fill" catalog="system" title="カメラの許可をしてください" imagePadding="8" cornerStyle="capsule">
                                     <fontDescription key="titleFontDescription" type="boldSystem" pointSize="16"/>
@@ -96,6 +96,7 @@
                             <constraint firstItem="vDu-zF-Fre" firstAttribute="bottom" secondItem="bcq-l2-IAg" secondAttribute="bottom" id="9lO-dp-3ng"/>
                             <constraint firstItem="1Kd-65-Gbj" firstAttribute="top" secondItem="zbe-UI-CKp" secondAttribute="bottom" constant="-133" id="Afi-21-YrQ"/>
                             <constraint firstAttribute="bottom" secondItem="xU5-xE-ref" secondAttribute="bottom" constant="80" id="ApO-a1-wM2"/>
+                            <constraint firstItem="zbe-UI-CKp" firstAttribute="top" secondItem="vDu-zF-Fre" secondAttribute="top" constant="224" id="DyV-ZN-fUi"/>
                             <constraint firstItem="bcq-l2-IAg" firstAttribute="top" secondItem="vDu-zF-Fre" secondAttribute="top" id="GlX-F0-Xh8"/>
                             <constraint firstItem="vDu-zF-Fre" firstAttribute="trailing" secondItem="1Kd-65-Gbj" secondAttribute="trailing" constant="48" id="MLn-0U-5AZ"/>
                             <constraint firstItem="5fy-dV-ESd" firstAttribute="trailing" secondItem="vDu-zF-Fre" secondAttribute="trailing" id="Nty-RS-eZw"/>
@@ -104,7 +105,6 @@
                             <constraint firstItem="vDu-zF-Fre" firstAttribute="trailing" secondItem="xU5-xE-ref" secondAttribute="trailing" constant="56" id="bat-kl-mbn"/>
                             <constraint firstItem="vDu-zF-Fre" firstAttribute="trailing" secondItem="bcq-l2-IAg" secondAttribute="trailing" id="beu-Nc-10b"/>
                             <constraint firstItem="bcq-l2-IAg" firstAttribute="leading" secondItem="vDu-zF-Fre" secondAttribute="leading" id="fDo-Z7-mfF"/>
-                            <constraint firstItem="FQF-Xb-Gd3" firstAttribute="top" secondItem="zbe-UI-CKp" secondAttribute="bottom" constant="104" id="fMm-HA-l6t"/>
                             <constraint firstItem="vDu-zF-Fre" firstAttribute="trailing" secondItem="urc-n8-HmE" secondAttribute="trailing" constant="88" id="fy0-qM-Pip"/>
                             <constraint firstItem="vDu-zF-Fre" firstAttribute="trailing" secondItem="FQF-Xb-Gd3" secondAttribute="trailing" constant="88" id="l4y-qs-mUo"/>
                             <constraint firstItem="zbe-UI-CKp" firstAttribute="centerX" secondItem="5EZ-qb-Rvc" secondAttribute="centerX" id="lPV-Qv-DGR"/>
