swiftChartsで歩数のグラフ

--- a/pppppp/View/Friend&MeDataView/ProfileView.storyboard
+++ b/pppppp/View/Friend&MeDataView/ProfileView.storyboard
@@ -72,6 +72,7 @@
                             <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="jrL-Kv-5tu">
                                 <rect key="frame" x="0.0" y="294" width="390" height="467"/>
                                 <color key="backgroundColor" white="0.0" alpha="0.0" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                                <color key="tintColor" red="0.57254901960000004" green="0.69803921570000005" blue="0.82745098039999998" alpha="0.64372930463576161" colorSpace="custom" customColorSpace="calibratedRGB"/>
                             </view>
                             <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="Gji-DF-TMj">
                                 <rect key="frame" x="0.0" y="294" width="390" height="467"/>
